# delivery_backend

./: .gitignore  README.md  database.db  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 48726d4b2708_initial_migration.py  89bc948266f2_remover_coluna.py
models/: model_db.py
routes/: auth_routes.py  order_routes.py
utils/: session_db.py
