[project]
name = "delivery-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.2",
    "bcrypt==4.0.1",
    "dotenv>=0.9.9",
    "fastapi>=0.127.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.45",
    "sqlalchemy-utils>=0.42.1",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.14.14",
]
